--- a/src/components/toxin-logo/toxin-logo.scss
+++ b/src/components/toxin-logo/toxin-logo.scss
@@ -1,5 +1,6 @@
 .toxin-logo{
   background: url(../../../components/toxin-logo/img/toxin-logo.svg) no-repeat;
-  width: 106px;
-  height: 40px;
+  background-size: cover;
+  width: 6.625rem;
+  height: 2.5rem;
 }
