--- a/src/components/toxin-logo/toxin-logo.scss
+++ b/src/components/toxin-logo/toxin-logo.scss
@@ -1,5 +1,5 @@
 .toxin-logo {
-  background: url(../../../components/toxin-logo/img/toxin-logo.svg) no-repeat;
+  background: url(./img/toxin-logo.svg) no-repeat;
   background-size: cover;
   width: 6.625rem;
   height: 2.5rem;
