--- a/src/components/toxin-logo/toxin-logo.scss
+++ b/src/components/toxin-logo/toxin-logo.scss
@@ -1,6 +1,6 @@
 .toxin-logo {
   background: url(./img/toxin-logo.svg) no-repeat;
   background-size: cover;
-  width: 6.625rem;
-  height: 2.5rem;
+  width: 106px;
+  height: 40px;
 }
